<resources>
    <string name="app_name">Satellite Images</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nasa_image_of_the_day">NASA image of the day</string>
    <string name="nasa_logo">NASA logo</string>
    <string name="earth_satellite_view">Earth Satellite View</string>
    <string name="images_of_mars">Images of Mars</string>
    <string name="images_of_mars_button">Images of Mars</string>
    <string name="earth_satellite_view_button">Earth Satellite View</string>
    <string name="loading_nasa_image_of_the_day">Loading NASA Image of the day</string>
    <string name="error_nfailed_to_load_image">Error\nFailed to load image</string>
    <string name="try_again">Try again</string>
    <string name="map_of_the_earth_provided_by_google_maps">Map of the Earth provided by Google Maps</string>
    <string name="pull_down_to_return_to_earth_satellite_images_page">Pull down to return to Earth Satellite Images Page</string>
    <string name="click_to_return_to_earth_satellite_images">return to Earth Satellite Images</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="save_image">Save image</string>
    <string name="no_image_data_for_location">No image data available</string>
    <string name="add">Add</string>
    <string name="satellite_view_of_certain_location">satellite view of certain location</string>
    <string name="preview_of_selected_satellite_image">Preview of selected satellite image</string>
    <string name="date_added">Date added: </string>
    <string name="date_taken">Date taken: </string>
    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude: </string>
</resources>