<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.example.nasa_googlemaps_api_project.satellite_images.SatelliteViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        tools:context=".satellite_images.fragments.SatelliteImagePreviewFragment">

        <TextView
            android:id="@+id/preview_satellite_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@{viewModel.passedData.title}"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/preview_satellite_card_view"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preview_satellite_title">

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/preview_satellite_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:transitionName="finalImage"
                android:contentDescription="@string/preview_of_selected_satellite_image"
                android:scaleType="centerCrop"
                app:setBitmap="@{viewModel.passedData.image}" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/preview_satellite_added_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_added"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintStart_toStartOf="@id/preview_satellite_card_view"
            app:layout_constraintTop_toBottomOf="@id/preview_satellite_card_view" />

        <TextView
            android:id="@+id/preview_satellite_added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.passedData.dateAdded}"
            app:layout_constraintStart_toStartOf="@id/preview_satellite_added_title"
            app:layout_constraintTop_toBottomOf="@id/preview_satellite_added_title" />

        <TextView
            android:id="@+id/preview_satellite_taken_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_taken"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintStart_toStartOf="@id/preview_satellite_card_view"
            app:layout_constraintTop_toBottomOf="@id/preview_satellite_added" />

        <TextView
            android:id="@+id/preview_satellite_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.passedData.dateTaken}"
            app:layout_constraintStart_toStartOf="@id/preview_satellite_taken_title"
            app:layout_constraintTop_toBottomOf="@id/preview_satellite_taken_title" />

        <TextView
            android:id="@+id/preview_satellite_longitude_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintStart_toStartOf="@id/preview_satellite_card_view"
            app:layout_constraintTop_toBottomOf="@id/preview_satellite_taken" />

        <TextView
            android:id="@+id/preview_satellite_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.passedData.longitude}"
            app:layout_constraintTop_toBottomOf="@id/preview_satellite_longitude_title"
            app:layout_constraintStart_toStartOf="@id/preview_satellite_longitude_title" />

        <TextView
            android:id="@+id/preview_satellite_latitude_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintStart_toStartOf="@id/preview_satellite_card_view"
            app:layout_constraintTop_toBottomOf="@id/preview_satellite_longitude" />

        <TextView
            android:id="@+id/preview_satellite_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.passedData.latitude}"
            app:layout_constraintTop_toBottomOf="@id/preview_satellite_latitude_title"
            app:layout_constraintStart_toStartOf="@id/preview_satellite_latitude_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>